@@ -145,8 +145,8 @@ Used on the t/*.t files.
 sub test_via_harness {
     my($self, $perl, $tests) = @_;
 
-    return qq{\t$perl "-MExtUtils::testlib" "-MExtUtils::Command::MM" }.
-           qq{"-e" "test_harness(\$(TEST_VERBOSE))" $tests\n};
+    return qq{\t$perl "-MExtUtils::Command::MM" }.
+           qq{"-e" "test_harness(\$(TEST_VERBOSE), '\$(INST_LIB)', '\$(INST_ARCH)')" $tests\n};
 }
 
 =item test_via_script
@@ -164,7 +164,7 @@ formatting.
 
 sub test_via_script {
     my($self, $perl, $script) = @_;
-    return "\t$perl \$(TEST_LIBS) $script\n";
+    return qq{\t$perl "-I\$(INST_LIB)" "-I\$(INST_ARCH)" $script\n};
 }
 
 =back
