@@ -94,7 +94,7 @@ sub constants {
 	      PERL_ARCHLIB SITELIBEXP SITEARCHEXP LIBPERL_A MYEXTLIB
 	      FIRST_MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
 	      PERL_INC PERL FULLPERL LIBPTH BASE_IMPORT PERLRUN
-          FULLPERLRUN PERLRUNINST FULLPERLRUNINST TEST_LIBS 
+          FULLPERLRUN PERLRUNINST FULLPERLRUNINST
           FULL_AR PERL_CORE NLM_VERSION MPKTOOL TOOLPATH
 
 	      / ) {
