@@ -1,6 +1,7 @@
 5.55_01
     [[ API Changes ]]
     * Long deprecated INST_EXE completely removed.
+    - Removing TEST_LIBS constant (never seen in a stable MM anyway)
 
     [[ Bug Fixes ]]
     - $mm->{PERM_*} were not being set
@@ -8,6 +9,7 @@
     - The above means MM_Unix will now compile cleanly under strict
     * init_dirscan's search for Makefile.PL's will no longer look
       inside a distdir.
+    * Fixed running tests when there are t/'s in subdirs.
 
     [[ Internals ]]
     - INST_* constants moved to init_INST exept for INST_MAN* which
@@ -179,7 +181,7 @@
 5.48_04 Mon Jan 21 19:28:38 EST 2002
     - No longer requiring Test::More
     - Now tested to work with a clean 5.6.1
-    - Stripped out $Revision: 1.30 $ based $VERSIONs.
+    - Stripped out $Revision: 1.31 $ based $VERSIONs.
     - Rolled in patches from p5p, vmsperl & VOS (14325, 14338, 14360, 14364)
     * hint files now run in a safer context.  Only $self is available.
     - ExtUtils::testlib now provides absolute paths into @INC.
